# firstbatch-sdk

./: .gitignore  pyproject.toml  readme.md
firstbatch/: __init__.py  async_core.py  constants.py  core.py  logger_conf.py  utils.py
firstbatch/algorithm/: __init__.py  base.py  custom.py  factory.py  registry.py  simple.py
firstbatch/algorithm/blueprint/: __init__.py  base.py  library.py
firstbatch/client/: __init__.py  async_client.py  base.py  schema.py  sync.py  wrapper.py
firstbatch/imports/: __init__.py
firstbatch/lossy/: __init__.py  base.py  product.py  scalar.py
firstbatch/vector_store/: __init__.py  base.py  chroma.py  pinecone.py  qdrant.py  schema.py  supabase.py  typesense.py  utils.py  weaviate.py
tests/algorithms/: test_algorithms.py  test_algorithms_async.py  test_algorithms_vs.py
tests/compression/: test_lossy_product.py  test_lossy_scalar.py
tests/parser/: test_parser.py
tests/vector_store/: test_chroma.py  test_pinecone.py  test_qdrant.py  test_supabase.py  test_typesense.py  test_weaviate.py
