[tool.poetry]
name = "firstbatch"
version = "0.1.73"
description = "FirstBatch SDK for integrating user embeddings to your project. Add real-time personalization to your AI application without user data."
authors = ["andthattoo <omer@firstbatch.xyz>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.26.0"
tdigest = "^0.5.2.2"
nanopq = {version="^0.2.0", optional=true}
chromadb = {version="^0.4.13", optional=true}
typesense = {version="^0.17.0", optional=true}
weaviate-client = {version="^3.24.2", optional=true}
vecs = {version="^0.4.1", optional=true}
requests = "^2.31.0"
pydantic = "1.10.13"
httpx = "^0.25.0"
dataclasses-json = "^0.6.1"
pinecone-client = {version="^2.2.4", optional=true}

[tool.poetry.group.test.dependencies]
pytest = "^7.3.0"
pytest-cov = "^4.0.0"
pytest-dotenv = "^0.5.2"
responses = "^0.22.0"
pytest-asyncio = "^0.20.3"

[tool.poetry.extras]
pinecone = ["pinecone-client"]
supabase = ["vecs"]
weaviate = ["weaviate-client"]
typesense = ["typesense"]
chromadb = ["chromadb"]
product = ["nanopq"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"